Sitting here talking to Jo about lorries and shipping wow

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
 
     <%= stylesheet_link_tag "application", :media => "all" %>
 
-    <link href="images/favicon.ico" rel="shortcut icon">
+    <!-- <link href="images/favicon.ico" rel="shortcut icon">
     <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
     <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
-    <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+    <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114"> -->
   </head>
   <body>
 
@@ -28,13 +28,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Bats</a>
+          <%= link_to "Bless Africa Tours", :root, class: "brand" %>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to "Trekking", :treks  %></li>
+              <li><%= link_to "Safaris", :safaris  %></li>
+              <li><%= link_to "Beach Destinations", :beaches  %></li>
+							<li><%= link_to "Day Trips", '#'  %></li>
+							<li><%= link_to "Itineraries", '#'  %></li>
             </ul>
+
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -48,20 +51,24 @@
             </div>
             <div class="span3">
               <div class="well sidebar-nav">
-                <h3>Sidebar</h3>
                 <ul class="nav nav-list">
-                  <li class="nav-header">Sidebar</li>
-                  <li><%= link_to "Link1", "/path1"  %></li>
-                  <li><%= link_to "Link2", "/path2"  %></li>
-                  <li><%= link_to "Link3", "/path3"  %></li>
+                  <li class="nav-header">Important links</li>
+                  <li><%= link_to "Galleries", "#"  %></li>
+                  <li><%= link_to "Accommodation", "#"  %></li>
+                  <li class="active"><%= link_to "Itineraries", "#path1"  %></li>
+                  <li><%= link_to "Important Information", "/path2"  %></li>
+                  <li><%= link_to "About Us", :about_us  %></li>
+									<li><%= link_to "Contact Us", :contact_us  %></li> 
+									<li><%= link_to "Guides and porters", :guides_and_porters  %></li>
                 </ul>
               </div><!--/.well -->
             </div><!--/span-->
         </div><!--/row-->
       </div><!--/content-->
-
+			
       <footer>
-        <p>&copy; Bless Africa Tours &amp; Safaris 2012</p>
+			<hr>
+        <p>&copy; Bless Africa Tours &amp; Safaris 2012 &bull; <a href="#">About us</a> &bull; <a href="#">Contact us</a></p>
       </footer>
 
     </div> <!-- /container -->
