--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -17,8 +17,8 @@
 	<strong>United Kingdom</strong><br>
 	BLESS AFRICA Tours and Safaris <br>
 	The Granary Church Farm,<br>
-	Station Road, <br> 
-	South Willingham, Lincolnshire, <br>
+	Station Road,South Willingham,<br>
+	LN8 6NJ Lincolnshire, <br>
 	United Kingdom <br><br>
 	<strong>Mobile:</strong> +44 0000 000 000 <br>
 	<strong>Landline:</strong> +44 0000 000 000 <br><br>
