--- a/app/views/destinations/_form.html.erb
+++ b/app/views/destinations/_form.html.erb
@@ -1,38 +1,26 @@
-<%= form_for @destination, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for [@destineable, @destination], :class => 'form-horizontal'  do |f| %>
   <div class="control-group">
     <%= f.label :title, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :title, :class => 'text_field' %>
+      <%= f.text_field :title, :class => 'span4' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :price, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :price, :class => 'text_field' %>
+      <%= f.text_field :price, :class => 'span4' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :description, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_area :description, :class => 'text_area' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :destineable_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :destineable_id, :class => 'number_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :destineable_type, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :destineable_type, :class => 'text_field' %>
+      <%= f.text_area :description, class: 'span8', rows: 15 %>
     </div>
   </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                destinations_path, :class => 'btn' %>
+                polymorphic_path([@destineable, @destination]), :class => 'btn' %>
   </div>
 <% end %>
