--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,33 +1,25 @@
 <%- model_class = Destination.new.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+<h1><%= @destineable.class %> <%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:price) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:destineable_id) %></th>
-      <th><%= model_class.human_attribute_name(:destineable_type) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%= model_class.human_attribute_name(:destination) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @destinations.each do |destination| %>
       <tr>
-        <td><%= link_to destination.id, destination_path(destination) %></td>
-        <td><%= destination.title %></td>
+        <td><%= link_to destination.title, polymorphic_path([@destineable, destination]) %></td>
         <td><%= destination.price %></td>
-        <td><%= destination.description %></td>
-        <td><%= destination.destineable_id %></td>
-        <td><%= destination.destineable_type %></td>
-        <td><%=l destination.created_at %></td>
+        <td><%= destination.destineable.title %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_destination_path(destination), :class => 'btn btn-mini' %>
+                      edit_polymorphic_path([@destineable, destination]), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      destination_path(destination),
+                      polymorphic_path([@destineable, destination]),
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
@@ -38,5 +30,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_destination_path,
+            new_polymorphic_path([@destineable, @destination]),
             :class => 'btn btn-primary' %>
