--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -3,7 +3,18 @@
 	<br>
   <%= markdown @destination.description %>
 	<br>
+	
 	<article class="alert alert-info">
 		<h2><%= model_class.human_attribute_name(:prices) %></h2>
 		<%= markdown @destination.price %>
 	</article>
+	
+	<div class="form-actions">
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                edit_polymorphic_path([@destineable, @destination]), :class => 'btn btn-mini' %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                polymorphic_path([@destineable, @destination]),
+                :method => :delete,
+                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                :class => 'btn btn-mini btn-danger' %>
+	</div>
