--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,23 @@
 <article class="">
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+	<div id="myCarousel" class="carousel slide">
+	  <!-- Carousel items -->
+	  <div class="carousel-inner">
+			  <div class="active item"><img src="./assets/Webiste-photos-Darrin-011.jpg" alt="" width="100%"></div>
+				<div class="item"><img src="./assets/Webiste-photos-Darrin-023.jpg" alt="" width="100%"></div>
+				<div class="item"><img src="./assets/Webiste-photos-Darrin-043.jpg" alt="" width="100%"></div>
+				<div class="item"><img src="./assets/Webiste-photos-Darrin-079.jpg" alt="" width="100%"></div>
+				<div class="item"><img src="./assets/Webiste-photos-Darrin-087.jpg" alt="" width="100%"></div>
+				<div class="item"><img src="./assets/Webiste-photos-Darrin-088.jpg" alt="" width="100%"></div>
+	  </div>
+	
+	  <!-- Carousel nav -->
+	  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+	  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+	</div>
+	<script>
+		$('.carousel').carousel({
+		  interval: 2000
+		})
+	</script>
+	<!--/ Carousel -->
 </article>
