Added Albums Photos and fixed related views

--- a/app/views/beaches/show.html.erb
+++ b/app/views/beaches/show.html.erb
@@ -3,7 +3,7 @@
 
   <%= markdown @beach.description %>
 
-<!-- <div class="form-actions">
+<div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               beaches_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
@@ -13,7 +13,7 @@
               :method => 'delete',
               :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
               :class => 'btn btn-danger' %>
-</div> -->
+</div>
 
 
 <article class="">
