--- a/app/views/welcome/about_us.html.erb
+++ b/app/views/welcome/about_us.html.erb
@@ -12,10 +12,8 @@
 <div class="row">
 	<article class="span3">
 		<ul class="thumbnails">
-			<li class="">
-				<a href="#" class="thumbnail">
+			<li class="thumbnail">
 					<img alt="New-governor-mark-capes" src="http://placehold.it/260x220" title="Mark Capes, Governor of St. Helena"> 
-				</a>
 			</li>
 		</ul>
 		<h3>Godbless Emil Swai</h3>
@@ -27,20 +25,20 @@
 		</p>
 	</article> 
 	
-	<article class="span5">
+	<article class="span6">
 		<h2 class="page-title">Thank you for your interest</h2>
 		<p>Godbless Emil Swai is the founder and managing Director of  Bless Africa Tours and Safaris. He is also the lead guide on the mountain trips. With the expert support and guidance from Godblesss your holiday adventure in Tanzania will be unforgettable.</p>
 		<p>Bless Africa Tours and Safaris specialise in Mountain climbs, Wildlife Safari, Eco Tours and Beach holidays within Tanzania. The company is committed to operating within the highest standard possible in Tanzania.  The safety and pleasure of our clients is the greatest priority for Bless Africa Tours and Safaris.</p>
 		<p>Godbless has been a guide on Mount Kilimanjaro for over 10 years. He has led trips up the Mountain in conjunction with UK charities and companies.  He is certified and licensed with the Kilimanjaro National Parks Authority (KINAPA), and has been trained in first aid. In addition Godbless has developed his knowledge about the local  flora and fauna and the wildlife that may be encountered on safari. Both his extensive experience and education will ensure a safe, knowledgeable and enjoyable experience whether it be an expedition to the summit of Mount Kilimanjaro, Safari or trip to one of Tanzania’s beautiful beaches.</p>
 		<br>
 	</article>
-	
+</div>
+
+<div class="row">
 	<article class="span3">
 		<ul class="thumbnails">
-			<li class="">
-				<a href="#" class="thumbnail">
-					<img alt="New-governor-mark-capes" src="http://placehold.it/260x220" title="Mark Capes, Governor of St. Helena"> 
-				</a>
+			<li class="thumbnail">
+					<img alt="New-governor-mark-capes"src="http://placehold.it/260x220" title="Mark Capes, Governor of St. Helena"> 
 			</li>
 		</ul>
 		<h3>Joanne Cutts</h3>
@@ -51,7 +49,7 @@
 			<small><a href="#">@BlessJoCutts</a></small>
 		</p>
 	</article> 
-	<article class="span5">
+	<article class="span6">
 		<h2 class="page-title">Welcome to Bless Africa tours</h2>
 		<p>Joanne Cutts is our colleague in the UK. She has travelled extensively with the company, climbing Kilimanjaro in 2010, going on safari in 2011 and visiting the beach in 2012. She is very happy to speak with prospective clients who have questions or queries about their trip to Tanzania, or to share her experiences.</p>
 	</article>
