--- a/app/views/destinations/_form.html.erb
+++ b/app/views/destinations/_form.html.erb
@@ -8,7 +8,7 @@
   <div class="control-group">
     <%= f.label :price, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :price, :class => 'span4' %>
+      <%= f.text_area :price, :class => 'span6', rows: 6 %>
     </div>
   </div>
   <div class="control-group">
