--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,10 +53,10 @@
               <div class="well sidebar-nav">
                 <ul class="nav nav-list">
                   <li class="nav-header">Important links</li>
-                  <li><%= link_to "Galleries", "#"  %></li>
+                  <li><%= link_to "Galleries", :albums  %></li>
                   <li><%= link_to "Accommodation", "#"  %></li>
-                  <li class="active"><%= link_to "Itineraries", "#path1"  %></li>
-                  <li><%= link_to "Important Information", "/path2"  %></li>
+                  <li class="active"><%= link_to "Itineraries", "#"  %></li>
+                  <li><%= link_to "Important Information", "#"  %></li>
                   <li><%= link_to "About Us", :about_us  %></li>
 									<li><%= link_to "Contact Us", :contact_us  %></li> 
 									<li><%= link_to "Guides and porters", :guides_and_porters  %></li>
@@ -77,6 +77,12 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "application" %>
+
+		<script>
+			$('.carousel').carousel({
+			  interval: 2000
+			})
+		</script>
 
   </body>
 </html>
