--- a/app/views/day_trips/_form.html.erb
+++ b/app/views/day_trips/_form.html.erb
@@ -2,13 +2,13 @@
   <div class="control-group">
     <%= f.label :title, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :title, :class => 'text_field' %>
+      <%= f.text_field :title, required: true, :class => 'span4' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :description, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_area :description, :class => 'text_area' %>
+      <%= f.text_area :description, :class => 'span6', rows: 9 %>
     </div>
   </div>
 
