--- a/app/views/day_trips/show.html.erb
+++ b/app/views/day_trips/show.html.erb
@@ -1,14 +1,6 @@
 <%- model_class = @day_trip.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human %></h1>
-
-<p>
-  <strong><%= model_class.human_attribute_name(:title) %>:</strong><br>
-  <%= @day_trip.title %>
-</p>
-<p>
-  <strong><%= model_class.human_attribute_name(:description) %>:</strong><br>
-  <%= @day_trip.description %>
-</p>
+<h1><%=t '.title', :default => @day_trip.title %></h1>
+<%= markdown @day_trip.description %>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
@@ -21,3 +13,47 @@
               :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
               :class => 'btn btn-danger' %>
 </div>
+<% if !@day_trip.destinations.blank? %>
+	<h6>Destinations</h6>
+	<hr>
+  <% for dt in @day_trip.destinations %>
+    <h3><%= link_to dt.title, day_trip_destination_path(@day_trip, dt), title: dt.title %></h3>
+		<%= markdown dt.description.truncate(300) %>
+		<p><%= link_to 'Read more...', day_trip_destination_path(@day_trip, dt) %></p>
+  <% end %>
+<% else %>
+  <div class="alert">
+  	<h6>Destination Itineraries</h6>
+		<p>There no Itineraries for this trip just yet. Hold it right there, I'm on it.</p>
+  </div>
+<% end %>
+</article>
+<hr>
+<%= form_for [@day_trip, @day_trip.destinations.new], :html => { :class => 'form-horizontal' } do |f| %>
+  <h3 class="page-title">Add a new itinerary</h3>
+	<br>
+	<div class="control-group">
+    <%= f.label :title, 'Destination name', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :title, :class => 'span3', required: true %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :price, 'Price breakdown', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :price, :class => 'span6', rows: 6 %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :description, class: 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :description, class: 'span6', rows: 8 %>
+    </div>
+  </div>
+
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                day_trips_path, :class => 'btn' %>
+  </div>
+<% end %>
