Have added new information in

--- a/app/views/welcome/about_us.html.erb
+++ b/app/views/welcome/about_us.html.erb
@@ -18,7 +18,7 @@
 		</ul>
 		<h3>Godbless Emil Swai</h3>
 		<p>
-			<em>Director (TZ)</em><br>
+			<em>Director </em><br>
 			<small>Mob: +255 7170 615 02</small><br>
 			<small>E-mail: <a href="mailto:&#x67;&#x6F;&#x64;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x5F;&#x65;&#x6D;&#x69;&#x6C;&#x20;&#x40;&#x79;&#x61;&#x68;&#x6F;&#x6F;&#x2E;&#x63;&#x6F;&#x6D;">godbless_emil @yahoo.com</a></small><br>
 			<small><a href="#">@BlessAfriTours</a></small>
@@ -43,7 +43,7 @@
 		</ul>
 		<h3>Joanne Cutts</h3>
 		<p>
-			<em>Managing Director (UK)</em><br>
+			<em>Director </em><br>
 			<small>Mob: +44 7974 258 491</small><br>
 			<small>E-mail: <a href="mailto:&#x6A;&#x2E;&#x63;&#x75;&#x74;&#x74;&#x73;&#x40;&#x72;&#x6F;&#x63;&#x6B;&#x65;&#x74;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;">j.cutts@rocketmail.com</a></small><br>
 			<small><a href="#">@BlessJoCutts</a></small>
