--- a/app/views/welcome/important_information.html.erb
+++ b/app/views/welcome/important_information.html.erb
@@ -1,2 +1,130 @@
-<h1>Important information</h1>
-<p>coming soon...</p>
+<h1>IMPORTANT INFORMATION</h1>
+ 
+<h4>Visa Requirements</h4>
+<p>UK citizens will need an entry visa. The Tanzanian government says that all travellers to the country require a visa, but visas can be obtained on arrival. Bless Africa Tours and Safaris recommends you acquire your visa before departure. 
+<p>All visa information is subject to change. You should confirm all visa related issues with the relevant Embassy prior to departure.
+
+<h3>TREKKING &mdash; Mount Kilimanjaro and Mount Meru</h3>
+<h4>Health</h4>
+<p>Before you decide to participate in a Kilimanjaro trek, or any other mountain trip, it is important that participants consider fitness levels, and make sure that adequate and appropriate preparation is undertaken. All summit routes on the mountain are non-technical, but should not be undertaken without full consideration of the conditions and the effects of the altitude. Do not be mistaken, the trek up to Uhuru Peak will be difficult. It’s very important to know and understand that everybody and anybody can be affected by altitude sickness, regardless of age or fitness levels. Some would say that the trek is purely psychological, trekkers will need to be both mentally and physically prepared. It would be advisable to contact your doctor to exclude any health risks and have a medical check-up before the trek . In case of emergency, you will directly return to the hotel.
+
+<p><strong>Vaccinations &amp; Protection</strong><br>
+It is strongly recommend to have protection against malaria, hepatitis A, tetanus, typhoid, polio and yellow fever. Please note you may be required to produce a valid yellow fever certificate on arrival in Tanzania. This includes travellers coming from Europe via, or transiting through, an endemic country including the airports of Nairobi (Kenya) and Addis Ababa (Ethiopia). Consult your travel clinic for latest advice on different prophylaxis available against malaria. Travellers may also wish to be immunised against meningococcal meningitis.
+
+<h4>Clothing and Footwear on Trek</h4>
+<p>All routes will pass through the four seasons during the climb. Summit night itself will be very cold and depending on weather conditions may be partly frozen, with snow falling and on he ground.  Guests will need to wear warm and windproof clothing to have an enjoyable trip.
+ 
+<p><strong>Walking boots</strong><br>
+Bless Africa Tours and Safaris strongly recommend walking in good boots. Trainers, tennis shoes or shoes of a similar ilk simply do not give the ankle support afforded by a decent pair of boots, or protection from the rain or cold. Many people now trek in the lighter weight Goretex or leather boots. They have the advantage that they take little breaking in. The slightly heavier traditional leather walking boots are also good. Avoid the types often found in high street shoe shops that are simply cheap trainers with a higher canvas side sewn on – they give little support and will probably not last the trek. Above all, your boots must be well broken in and comfortable. We strongly do not recommend borrowing or renting boots. It is a good idea to carry your boots in your hand luggage on international flights or wear them – should your luggage be delayed, your well broken in boots are the one thing which will be irreplaceable. Gaiters are useful to keep snow and scree out of your boots.
+Trainers or trekking sandals
+<p>You may choose to bring these which will be useful in towns and when travelling, and leave them in Moshi. It is worth bearing in mind that trekking sandals afford you little protection from stubbing  your toes when walking around rock-strewn campsites at night.
+
+<p><strong>Socks</strong><br>
+It is best to wear a pair of liner socks under a pair of fairly thick loop stitch socks. This helps to protect your feet against blisters. Avoid nylon socks, they are abrasive, don’t ‘breathe’ well and can cause blisters.
+ 
+<p><strong>Jacket</strong><br>
+After sunset, temperatures can fall below freezing. A very warm jacket is the most convenient way of keeping warm when the temperature drops. Down jackets are recommended especially for the summit attempt.
+
+<p><strong>Waterproofs</strong><br>
+Breathable jacket and trouser-type waterproofs made from material such as Goretex not only protects against rain and wind, but also stops you from overheating. They ‘breathe’ and avoid condensation that you will experience from nylon waterproofs.
+
+<p><strong>Long trousers</strong><br>
+For everyday walking, light trekking trousers are the most suitable. Jeans are not recommended as they are often difficult to walk in over longer distances and become cumbersome when wet.
+
+<p><strong>Thick sweaters and fleece jackets</strong><br>
+Thick sweaters or fleece jackets are essential as nights can be very cold at altitude. Make sure that your waterproof jacket is loose enough to wear over your sweaters and/or fleeces.
+
+<p><strong>Thermal underwear/base layers</strong><br>
+Long sleeve tops and “long john” legging thermal underwear is essential. Please note that cotton clothing like t-shirts are not suitable or recommended as a base layer. Cotton does not “wick away” any moisture from the skin. In extreme cold, this could lead to hypothermia. It can also contribute to chaffing of the skin in sensitive areas leading to discomfort and skin irritation.
+
+<p><strong>Shorts</strong><br>
+Shorts can be very comfortable to walk in but you must carry long trousers with you in case you get either sunburned or cold! Follow your tour leaders advice on local sensitivities to wearing shorts during the trek.
+
+<p><strong>Waterproof gloves; a warm scarf & a warm hat</strong><br>
+Especially useful in the morning and in the evening at higher altitudes, and are essential for summit night. Lightweight gloves or mittens are not practical. Also bring a scarf to cover your neck and a warm balaclava or a warm hat.
+
+<h3>Support and facilities on Trek</h3>
+<p><strong>Staff</strong><br>
+Our crew consists of a professional and well experienced English speaking mountain guide, an assistant guide, cooks and porters.
+
+<p><strong>Facilities</strong><br>
+Depending on the route chosen, overnights will be either in tents or huts. Toilet facilities are very basic, of the long drop variety at most campsites. There will be limited access to water, especially in the latter stages of the trek, towards the summit. Hot water will be provided to wash hands prior to meals. Bless Africa Tours and Safaris will provide tents with roll mattresses. The porters will erect and take down the tents. There will also be camping chairs, tables and lamps provided for meals and downtime.
+
+<h3>Luggage and Personal Equipment</h3>
+<p><strong>Trek kit bag</strong><br>
+Before leaving Moshi there is time to re-sort luggage into what you need on trek and what can be left in Moshi . Think about what you are taking on trek (remember your sleeping bag) and then think how big your kit bag needs to be. An ex-army type can usually be obtained cheaply. A nylon or canvas bag with a zip along the top is also suitable. Whatever you choose, it must be strong and waterproof, but the porters will carry your kit in heavy duty outer bags for added protection. Soft luggage is essential as framed rucksacks are unsuitable. The weight limit for bag AND its contents must not exceed 15kg.
+
+<p><strong>Small rucksack/day bag</strong><br>
+During the course of a trekking day, you do not have access to the luggage that is being carried for you by the porters. In any mountain region the weather can change rapidly and you must be equipped for this. We would recommend that you have a waterproof liner or cover. Your daysack should, therefore, be large enough to carry the following: waterproofs, fleece, long trekking trousers (if walking in shorts), warm hat and gloves, sun hat, sun cream, platypus (at least 2 litres), water bottle (1-2 litres), tissues and your packed lunch. Most people normally find that this adds up to about 3 to 5kg. Camera equipment can be heavy so think carefully when deciding what to take. Remember to carry spare film with you during the day. It is usually more comfortable to carry a slightly larger pack that is not full than to carry a small pack that is overfull or with ‘bits’ tied on the outside. Something around 30 litres capacity is probably the most suitable. A shoulder bag is not a practical alternative. Nor are gym type bags.
+
+<p><strong>Heavy duty plastic bags</strong><br>
+If you pack your gear in heavy duty plastic bags or dry bags inside your kit bag, they will stay dry in case of rain. It will also be easier for you to sort through. Remember, the less you have to unpack in the evening, the less you have to repack each morning! One of these bags to use inside your day bag is strongly recommended.
+
+<p><strong>Sleeping bag</strong><br>
+As you do not carry it yourself, this may be down or synthetic, but it must be 4-season comfort rating (temperature –10°C to –5°C). A silk or fleece liner helps to keep your bag clean and adds an extra season.
+
+<p><strong>Trekking poles</strong><br>
+Trekking poles are strongly recommended and can usually be hired in Moshi, at $15 US per pair. However, you may prefer to take your own.
+
+<p><strong>Water Bottle or Platypus/Camelbak hydration system</strong><br>
+Water along the trail must never be considered as drinkable until purified. Take at least two 2 litre personal water bottles or a system that allows for this much water. A personal supply of tablets/drops for water purification system is essential. Powdered fruit juice can be used to disguise the taste. This can be purchased in Moshi. If you elect to use a hydration system with a tube then it is essential that the bladder and tube are insulated for high altitude and below freezing temperatures.
+
+<p><strong>Sunglasses/snow goggles</strong><br>
+A good pair of sunglasses/snow goggles are essential for protection against UV rays and glare at high altitudes.
+
+<p><strong>Sun hat, high factor sun cream/block &amp; lip salve</strong><br>
+Choose a high factor suncream (Factor 30 or more) to protect your skin against the sun at high altitudes. A combination sunblock/ lipsalve is ideal for facial protection.
+
+<p><strong>Torch/batteries/bulb</strong><br>
+A head torch is essential for finding things at night and finding your way on summit night. Remember to bring some spare batteries and a bulb. There are no facilities on the mountain to recharge any digital equipment.
+
+<p><strong>Toiletries</strong><br>
+Keep heavy cosmetics to a minimum. Essentials are toothbrush/paste, and small nail brush. ‘Wet Wipes’ are great for an alternative to washing and a quick clean up.
+
+<p><strong>Personal first aid kit</strong><br>
+On each trek a first aid kit is carried but you should have your own blister kit, supply of plasters, paracetamol, ibuprofen and other essentials. Please do not give medicines to local people without consulting the tour leader.
+
+<p><strong>Personal supplementary snacks</strong><br>
+Although sufficient food is supplied on this tour, we recommend that you bring some high energy snacks like cereal bars and chocolate (sweets if you
+are lactose intolerant) with you. Dextrose and mint cake are especially good for summit night.
+
+<p><strong>When to Trek Kilimanjaro</strong></p>
+<p>Kilimanjaro can be trekked all year. Mid-December, January, February and March are the warmest months, almost clear of clouds. April and early May may get heavy rain or snow, but is a better time to visit if you want a quiet clear mountain. By late June, July and through August it can be very cold at night but the sky is clear above 3000m offering great views. Through September and October it gets steadily warmer. October is particularly good if you want only few drops of rain, mild weather and few people on the mountain. November to mid-December is the time of the ‘short rains’ with possible afternoon thunderstorms but clear evenings. There can also be heavy snow towards the summit.
+
+<h3>Full moon Treks</h3>
+<p>Summiting Kilimanjaro under an African full moon can be an unforgettable experience, with the snow twinkling and the path lit by the light of the moon.
+<p>The dates below show when the moon is full in 2012, if you wish to plan your trek to coincide with a full moon.</p>
+<table class="table">
+	<caption>2012</caption>
+<tr>
+	<th>Month </th>
+	<td>01</td>
+	<td>02</td>
+	<td>03</td>
+	<td>04</td>
+	<td>05</td>
+	<td>06</td>
+	<td>07</td>
+	<td>08</td>
+	<td>09</td>
+	<td>10</td>
+	<td>11</td>
+	<td>12</td>
+</tr>
+<tr>
+	<th>Day</th>
+	<td>30</td>
+	<td>28</td>
+	<td>30</td>
+	<td>28</td>
+	<td>27</td>
+	<td>26</td>
+	<td>26</td>
+	<td>24</td>
+	<td>23</td>
+	<td>23</td>
+	<td>21</td>
+	<td>21</td>
+</tr>
+</table>
+
