--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Bats" %></title>
+    <title><%= title %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -55,7 +55,7 @@
                   <li class="nav-header">Important links</li>
                   <li><%= link_to "Galleries", :albums  %></li>
                   <li><%= link_to "Accommodation", "#"  %></li>
-                  <!-- <li><%= link_to "Itineraries", :itineraries  %></li> -->
+                  <li><%= link_to "About Tanzania", :about_tanzania  %></li>
                   <li><%= link_to "Important Information", :important_information  %></li>
                   <li><%= link_to "About Us", :about_us  %></li>
 									<li><%= link_to "Contact Us", :contact_us  %></li> 
@@ -68,7 +68,12 @@
 			
       <footer>
 			<hr>
-        <p>&copy; Bless Africa Tours &amp; Safaris 2012 &bull; <%= link_to "About us", :about_us %> &bull; <%= link_to "Contact us", :contact_us %></p>
+        <p>&copy; Bless Africa Tours &amp; Safaris 2012 &bull; 
+					<%= link_to "About us", :about_us %> &bull; 
+					<%= link_to "About Tanzania", :about_tanzania %> &bull; 
+					<%= link_to "Important Information", :important_information %> &bull; 
+					<%= link_to "Contact us", :contact_us %>
+				</p>
       </footer>
 
     </div> <!-- /container -->
