Pushing mye to octocats

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,18 +1,46 @@
-<article class="">
-	<div id="myCarousel" class="carousel slide">
-	  <!-- Carousel items -->
-	  <div class="carousel-inner">
-			  <div class="active item"><img src="./assets/Webiste-photos-Darrin-011.jpg" alt="" width="100%"></div>
-				<div class="item"><img src="./assets/Webiste-photos-Darrin-023.jpg" alt="" width="100%"></div>
-				<div class="item"><img src="./assets/Webiste-photos-Darrin-043.jpg" alt="" width="100%"></div>
-				<div class="item"><img src="./assets/Webiste-photos-Darrin-079.jpg" alt="" width="100%"></div>
-				<div class="item"><img src="./assets/Webiste-photos-Darrin-087.jpg" alt="" width="100%"></div>
-				<div class="item"><img src="./assets/Webiste-photos-Darrin-088.jpg" alt="" width="100%"></div>
-	  </div>
-	
-	  <!-- Carousel nav -->
-	  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-	  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+<div class="row">
+	<div class="span2">
+		<p>&nbsp;</p>
+		<p>wow wow</p>
 	</div>
-	<!--/ Carousel -->
-</article>
+	<article class="span8">
+		<div id="myCarousel" class="carousel slide">
+		  <!-- Carousel items -->
+		  <div class="carousel-inner">
+				  <div class="active item"><img src="./assets/Webiste-photos-Darrin-011.jpg" alt="" width="100%"></div>
+					<div class="item"><img src="./assets/Webiste-photos-Darrin-023.jpg" alt="" width="100%"></div>
+					<div class="item"><img src="./assets/Webiste-photos-Darrin-043.jpg" alt="" width="100%"></div>
+					<div class="item"><img src="./assets/Webiste-photos-Darrin-079.jpg" alt="" width="100%"></div>
+					<div class="item"><img src="./assets/Webiste-photos-Darrin-087.jpg" alt="" width="100%"></div>
+					<div class="item"><img src="./assets/Webiste-photos-Darrin-088.jpg" alt="" width="100%"></div>
+		  </div>
+		
+		  <!-- Carousel nav -->
+		  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+		  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+		</div>
+		<!--/ Carousel -->
+	</article>
+	
+	<div class="span2">
+		<p>&nbsp;</p>
+		<p>wow wow</p>
+	</div>
+</div><!--/ row -->
+<hr>
+<div class="row">
+	<article class="span3 alert alert-info">
+		<h1 id="safaris"><a href="#">African safaris</a></h1>
+	</article>
+	
+	<article class="span3 alert alert-info">
+		<h1 id="safaris"><a href="#">Mountain treks</a></h1>
+	</article>
+	
+	<article class="span3 alert alert-info">
+		<h1 id="safaris"><a href="#">Day trips</a></h1>
+	</article>
+	<article class="span3 alert alert-info">
+		<h1 id="safaris"><a href="#">Beach holidays</a></h1>
+	</article>
+</div>
