--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,47 +1,5 @@
-<!DOCTYPE html>
-<html lang="en-GB">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
-    <%= csrf_meta_tags %>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-    <![endif]-->
-
-    <%= stylesheet_link_tag "application", :media => "all" %>
-
-    <!-- <link href="images/favicon.ico" rel="shortcut icon">
-    <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
-    <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114"> -->
-  </head>
-  <body>
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <%= link_to "Bless Africa Tours", :root, class: "brand" %>
-          <div class="container nav-collapse">
-            <ul class="nav">
-              <li><%= link_to "Trekking", :treks  %></li>
-              <li><%= link_to "Safaris", :safaris  %></li>
-              <li><%= link_to "Beach Destinations", :beaches  %></li>
-							<li><%= link_to "Day Trips", :day_trips  %></li>
-							<!-- <li><%= link_to "Itineraries", :itineraries  %></li> -->
-            </ul>
-
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+<%= render 'layouts/header' %>
 
     <div class="container">
       <div class="content">
@@ -66,28 +24,4 @@
         </div><!--/row-->
       </div><!--/content-->
 			
-      <footer>
-			<hr>
-        <p>&copy; Bless Africa Tours &amp; Safaris 2012 &bull; 
-					<%= link_to "About us", :about_us %> &bull; 
-					<%= link_to "About Tanzania", :about_tanzania %> &bull; 
-					<%= link_to "Important Information", :important_information %> &bull; 
-					<%= link_to "Contact us", :contact_us %>
-				</p>
-      </footer>
-
-    </div> <!-- /container -->
-
-    <!-- Javascripts
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <%= javascript_include_tag "application" %>
-
-		<script>
-			$('.carousel').carousel({
-			  interval: 2000
-			})
-		</script>
-
-  </body>
-</html>
+<%= render 'layouts/footer' %>
