Removed and added authentication

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
-      <footer>
-			<hr>
+      <footer class="footer">
         <p>&copy; Bless Africa Tours &amp; Safaris 2012 &bull; 
 					<%= link_to "About us", :about_us %> &bull; 
 					<%= link_to "About Tanzania", :about_tanzania %> &bull; 
 					<%= link_to "Important Information", :important_information %> &bull; 
 					<%= link_to "Contact us", :contact_us %>
 				</p>
+				<p>Designed and built with all the love in the world <a href="http://safarista.com" target="_blank" title="Safarista Design">@Safarista Design</a> by <a href="http://twitter.com/ilinkoln">@iLinkoln</a></p>
       </footer>
 
     </div> <!-- /container -->
