--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,10 @@
 
     <div class="container">
       <div class="content">
+			<% if !("welcome#index") %>
+				<%= yield %>
+			<% else %>
+				  
         <div class="row">
            <div class="span9">
               <%= yield %>
@@ -23,5 +27,5 @@
             </div><!--/span-->
         </div><!--/row-->
       </div><!--/content-->
-			
+			<% end %>
 <%= render 'layouts/footer' %>
